--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   	<script src="https://maps.google.com/maps/api/js?v=3&sensor=false"></script>
-	<script src="http://js.api.here.com/v3/3.0/mapsjs-core.js"
+	<script src="https://js.api.here.com/v3/3.0/mapsjs-core.js"
           	type="text/javascript" charset="utf-8"></script>
-    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js"
+    <script src="https://js.api.here.com/v3/3.0/mapsjs-service.js"
           	type="text/javascript" charset="utf-8"></script>  
 	<style type="text/css">
 	
